# sphinx_server

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/userguide/: index.rst
src/sphinx_server/: __init__.py  app.py  auth.py  auto_builder.py  build_service.py  config.py  database.py  git_utils.py  log_utils.py  main.py  model_converter.py  models.py  time_utils.py  ui_models.py
src/sphinx_server/web/: __init__.py  account.py  admin.py  docs.py
src/sphinx_server/web/static/: sphinx-nav.js
src/sphinx_server/web/templates/: account.html  base.html
src/sphinx_server/web/templates/admin/: _provider_label.html  build_log.html  index.html  repo_detail.html  repo_form.html  settings.html  target_form.html  users.html
src/sphinx_server/web/templates/auth/: login.html
src/sphinx_server/web/templates/docs/: index.html  target.html
