[project]
name = "sphinx-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mickaël Descamps", email = "mickael.descamps@enerfox.fr" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sphinx-server = "sphinx_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
