[project]
name = "sphinx-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mickaël Descamps", email = "mickael.descamps@enerfox.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",
    "sphinx>=7.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sphinx-server = "sphinx_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
