[project]
name = "sphinx-server"
version = "0.1.0"
description = "Application to track repository with sphinx documentation, build documentation on all branch and tags tracked and host it accross a webpage to explore it."
readme = "README.md"
changelog="CHANGELOG.md"
authors = [
    { name = "Mickaël Descamps", email = "mickael.descamps@mineyou.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "aiofiles>=23.2",
    "python-multipart>=0.0.9",
    "sphinx>=7.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sphinx-server = "sphinx_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-autoindex",
    "sphinx-copybutton>=0.5.2",
    "sphinx-prompt>=1.9.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxemoji>=0.3.1",
    "toml>=0.10.2",
    "myst-parser>=4.0.1",
]
